--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,10 @@
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.10",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.5.3",
     "vite": "^7.1.12"
   }
